# titanic

./: .env  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/: main.py
src/titanic/: data.py  registry.py  train.py  utils.py
src/titanic_Rxdsilver/: registry.py
tests/: test_data.py  test_registry.py  test_train.py
